--- a/plugin.xml
+++ b/plugin.xml
@@ -26,13 +26,13 @@
 
         <source-file src="src/android/rfidUbx.java" target-dir="src/com/justep/cordova/plugin" />    
 
-        <source-file src="src/android/armeabi/libDeviceAPI.so" target-dir="libs/armeabi" />
-        <source-file src="src/android/armeabi/libModuleAPI_Android.so" target-dir="libs/armeabi" />
-		<source-file src="src/android/armeabi/libpackage.so" target-dir="libs/armeabi" />
-		<source-file src="src/android/armeabi/librfidjni.so" target-dir="libs/armeabi" />
-		<source-file src="src/android/armeabi/libserial_port.so" target-dir="libs/armeabi" />
-		<source-file src="src/android/armeabi/libUhf-lib.so" target-dir="libs/armeabi" />
-		<source-file src="src/android/armeabi/libuhfrfid.so" target-dir="libs/armeabi" />
+        <source-file src="src/android/armeabi/libDeviceAPI.so" target-dir="libs/armeabi-v7a" />
+        <source-file src="src/android/armeabi/libModuleAPI_Android.so" target-dir="libs/armeabi-v7a" />
+		<source-file src="src/android/armeabi/libpackage.so" target-dir="libs/armeabi-v7a" />
+		<source-file src="src/android/armeabi/librfidjni.so" target-dir="libs/armeabi-v7a" />
+		<source-file src="src/android/armeabi/libserial_port.so" target-dir="libs/armeabi-v7a" />
+		<source-file src="src/android/armeabi/libUhf-lib.so" target-dir="libs/armeabi-v7a" />
+		<source-file src="src/android/armeabi/libuhfrfid.so" target-dir="libs/armeabi-v7a" />
 		
         <source-file src="src/android/device.jar" target-dir="libs" />		
 		<source-file src="src/android/fastjson-1.2.7.jar" target-dir="libs" />	
